<resources>
    <string name="app_name">Popular Movie</string>
    <string name="action_settings">Settings</string>
    <string name="action_rate">Sort by rate</string>
    <string name="action_popular">Sort by popularity</string>
    <string name="spotif_streamer">Spotify Streamer</string>
    <string name="super_duo">Super Duo</string>
    <string name="score_app">Score App</string>
    <string name="lib_app">Library App</string>
    <string name="build_It_bigger">Build It Bigger</string>
    <string name="xyz_reader">XYZ Reader</string>
    <string name="capstone">Capstone:My own App</string>
    <string name="my_nano_app">My Nanodegree App</string>
    <string name="this_button_will_launch_my">This button will launch my</string>
    <string name="no_network">No Network</string>

    <string name="loading">Loading.....</string>
    <string name="rating">Rating: %s</string>
    <string name="release_date">Release Date: %s</string>
    <string name="mode_favored">Favorites</string>

    <string name="mode_sort">Sorting</string>
    <string name="mode_sort_popularity">Most popular</string>
    <string name="mode_sort_vote_average">Highest rated</string>
    <string name="mode_sort_vote_count">Most rated</string>

    <string name="movie_image_desc">Movie image</string>
    <string name="movie_poster_desc">Movie poster</string>
    <string name="menu_sort">Sorting</string>
    <string name="menu_sort_popularity">Most popular</string>
    <string name="menu_sort_vote_average">Highest rated</string>
    <string name="menu_sort_vote_count">Most rated</string>
    <string name="menu_sort_favorites">Favorite</string>
    <string name="remove_favorites">Remove Favorite</string>
    <string name="add_to_favorites">Add To Favorite</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_scroll_to_top">Scroll to top</string>
    <string name="menu_about">About</string>
    <string name="select_movie_from_list">Select Movie from list</string>
    <string name="sync_account_type">themovies.com</string>
    <string name="content_authority">com.digital.ayaz</string>
    <string name="mark_as_favorite">Mark As Favorite</string>
    <string name="progress_msg">Please wait</string>
    <string name="no_internet_connection">No Internet Connection</string>

</resources>
